--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,12 @@
 [versions]
-agp = "8.11.1"
-hiltAndroid = "2.57"
-hiltCompiler = "2.57"
+agp = "8.12.1"
+hiltAndroid = "2.57.1"
+hiltCompiler = "2.57.1"
 hiltCompilerVersion = "1.2.0"
-kotlin = "2.2.0"
-coreKtx = "1.16.0"
+room = "2.7.2"
+kotlin = "2.1.0"
+ksp = "2.1.0-1.0.29"
+coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
@@ -12,13 +14,13 @@ kotlinxCoroutinesAndroid = "1.10.2"
 kotlinxCoroutinesCore = "1.10.2"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.07.00"
+composeBom = "2025.08.00"
 appcompat = "1.7.1"
 lifecycleViewmodelCompose = "2.9.2"
 material = "1.12.0"
 
 composeNavigation = "2.9.3"
-mockitoCore = "5.18.0"
+mockitoCore = "5.19.0"
 mockitoKotlin = "6.0.0"
 poi = "5.4.1"
 poiOoxml = "5.4.1"
@@ -70,6 +72,8 @@ poi-ooxml = { module = "org.apache.poi:poi-ooxml", version.ref = "poiOoxml" }
 
 
 [plugins]
+room = { id = "androidx.room", version.ref = "room" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
